<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:title="@string/drawer_home"
      android:icon="@drawable/ic_home_24px" />
    <item
      android:id="@+id/nav_articles"
      android:title="@string/drawer_articles"
      android:icon="@drawable/ic_article_24px" />
    <item
      android:id="@+id/nav_exercises"
      android:title="@string/drawer_exercises"
      android:icon="@drawable/ic_exercise_24px" />
    <item
      android:id="@+id/nav_add"
      android:title="@string/add_article_or_exercise"
      android:icon="@drawable/ic_add_24px" />
  </group>
</menu>