<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/first_time_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/app_name"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="120dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:backgroundTint="@color/cardview_dark_background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/import_course_id"
                android:text="@string/course_id"/>
            <EditText
                android:id="@+id/import_course_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="number"
                android:maxLength="8" />
            <Button
                android:id="@+id/import_course_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_course"
                android:layout_margin="6dp"
                android:padding="6dp"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginHorizontal="20dp"/>
        
        <Button
            android:id="@+id/create_course_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:text="@string/create_course_btn" />
    </LinearLayout>

</LinearLayout>