<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  card_view:cardCornerRadius="5dp"
  card_view:cardElevation="4dp"
  android:layout_margin="2dp"
  android:layout_width="match_parent"
  android:layout_height="80dp">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/listingTitleTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical|start"
      android:text="@string/titlePlaceholder"
      android:textSize="36sp" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <ImageView
        android:id="@+id/readTickImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/exercise_icon_text"
        android:scaleType="fitEnd"
        card_view:srcCompat="@drawable/ic_notread_24px" />

      <ImageView
        android:id="@+id/typeIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/exercise_icon_text"
        android:scaleType="fitEnd"
        card_view:srcCompat="@drawable/ic_exercise_24px" />

      <ImageView
        android:id="@+id/hardIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/exercise_icon_text"
        android:scaleType="fitEnd"
        card_view:srcCompat="@drawable/ic_hard_icon_24px"
        android:visibility="invisible" />

    </LinearLayout>

    <ImageView
      android:id="@+id/deleteImageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentStart="true"
      android:layout_below="@id/listingTitleTextView"
      android:contentDescription="@string/articleIconDescription"
      android:scaleType="fitEnd"
      card_view:srcCompat="@drawable/ic_delete_24px"
      android:visibility="visible" />

  </RelativeLayout>
</androidx.cardview.widget.CardView>
